Sun Aug  3 17:33:36 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp: The skeleton files needed an extra
	  include if dynamic_hash is used. This was needed due to the
	  recent refactoring. 

Sat Aug 02 17:35:44 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* orbsvcs/orbsvcs/Notify/Method_Request_Dispatch_T.h (class
	  TAO_Notify_Method_Request_Dispatch_T): Removed unnecessary
	  export declaration for the template class.  It was causing
	  compilation errors on MSVC 7.1.

Sat Aug  2 13:08:51 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/Event_Service/Event_Service.h:
	* orbsvcs/ImplRepo_Service/ImR_Locator_i.h:
	* orbsvcs/ImplRepo_Service/tao_imr_i.h:
	* orbsvcs/LoadBalancer/Signal_Handler.h:
	* orbsvcs/Notify_Service/Notify_Service.h:
	* orbsvcs/PSS/PSDL_Datastore.cpp:
	* orbsvcs/PSS/PSDL_Datastore.h:
	* orbsvcs/PSS/PSDL_Scope.h:
	* orbsvcs/PSS/PSDL_String.cpp: Fixed compile errors that were
	  caused due to the refactoring done in ACE+TAO core.

Sat Aug  2 09:14:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/Server_Request_interceptor.cpp:
	* orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/client.cpp:

	  Cosmetic fixes.

Sat Aug  2 09:10:06 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp:
	  Cosmetic fixes.

	* orbsvcs/orbsvcs/FaultTolerance/FT_Services_Activate.h:
	* orbsvcs/orbsvcs/FaultTolerance/FT_Services_Activate.cpp: Moved
	  all the initialization to the Initializer () routine. This
	  should fix problems in the static builds. This have been long
	  overdue.

Sat Aug  2 08:05:18 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Adapter.h:
	* tao/Adapter.cpp: Looks like a forwar declaration of
	  SystemException was insufficient in builds where native
	  exceptions are used.
