@@ -2,7 +2,7 @@
 
 #include "File_i.h"
 #include "tao/debug.h"
-#include "ace/streams.h"
+#include "ace/SString.h"
 #include "ace/Get_Opt.h"
 #include "ace/Task.h"
 
