@@ -18,6 +18,7 @@
 //=========================================================================
 
 #include "testS.h"
+#include "ace/SString.h"
 
 class test_i : public POA_test
 {
