@@ -17,6 +17,7 @@
 // ================================================================
 
 #include "ace/Get_Opt.h"
+#include "ace/SString.h"
 #include "testS.h"
 
 ACE_RCSID(Explicit_Activation, server, "$Id$")
